<resources>
    <string name="app_name">TalkyDroid</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="talkydroid_welcome_text">TalkyDroid</string>
    <string name="talkydroid_launchericon">TalkyDroid_launcherIcon</string>
    <string name="type_message">Type message</string>
    <string name="person_name">Person name</string>
    <string name="message_received">Message received</string>
    <string name="message_send">Message send</string>
    <string name="time">12:00</string>
    <string name="conversation_title">Conversation title</string>
    <string name="conversation_description">conversation description</string>
    <string name="select_the_file_type">Select the file type</string>
    <string name="image">Image</string>
    <string name="location">Location</string>
    <string name="file">File</string>
    <string name="gallery">Gallery</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="unknown">Unknown</string>
    <string name="capture_image">Capture Image</string>
    <string name="usb_device_configuration">USB device configuration</string>
    <string name="connected_device_information">Connected device information</string>
    <string name="settings">Settings</string>
    <string name="delete_all_conversations">Delete all conversations</string>
    <string name="delete_all_users">Delete all users</string>
    <string name="connection">Connection</string>
    <string name="talkydroid">TalkyDroid</string>
    <string name="channel_scanning">Channel scanning...</string>
    <string name="scan_channels">Scan channels</string>
    <string name="delete_all_users_and_messages">Delete all users and messages</string>
    <string name="connection_informations">Connection informations</string>
    <string name="no_device_connected">No device connected</string>
    <string name="channel_name">TalkyDroid_channel_name</string>
    <string name="channel_description">TalkyDroid_channel_description</string>
    <string name="reply_label">TalkyDroid_replyLabel</string>
    <string name="label">TalkyDroid_label</string>
    <string name="user_name">User name</string>

</resources>