<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/select_file_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundLauncherColor"
        android:gravity="center"
        android:padding="10dp"
        android:scaleType="center"
        android:text="@string/select_the_file_type"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_below="@+id/select_file_textView"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/send_image_button"
                android:layout_width="60dp"
                android:layout_gravity="center"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_baseline_insert_photo"
                android:background="@drawable/ic_baseline_send_background">
            </ImageButton>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/gallery"
                android:textSize="14sp"
                android:gravity="center">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/send_location_button"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_baseline_location"
                android:background="@drawable/ic_baseline_send_background">
            </ImageButton>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/location"
                android:textSize="14sp"
                android:gravity="center">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/send_document_button"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_baseline_document"
                android:background="@drawable/ic_baseline_send_background">
            </ImageButton>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/file"
                android:textSize="14sp"
                android:gravity="center">

            </TextView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>