<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/settings_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_relativelayout_border"
        android:padding="10dp">

        <TextView
            android:id="@+id/settings_text_user_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="User profil"

            />

        <LinearLayout
            android:id="@+id/settings_linearLayout_Button_change_user_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_text_user_profil"
            android:orientation="horizontal"
            android:gravity="left"
            android:clickable="true">

            <ImageView
                android:id="@+id/settings_imageView_userAvatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ic_baseline_unknown_user" />

            <TextView
                android:id="@+id/settings_textView_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@null"
                android:text="@string/user_name"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:textAppearance="@android:style/TextAppearance.Material.Body2"/>

         </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_relativelayout_border"
        android:padding="10dp">

    <TextView
        android:id="@+id/settings_text_database"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="TalkyDroid database"

        />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_below="@+id/settings_text_database"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ic_baseline_restore_from_trash" />

            <Button
                android:id="@+id/settings_button_deleteUsers"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:textAppearance="@android:style/TextAppearance.Material.Body2"
                android:text="@string/delete_all_users_and_messages"
                android:textAllCaps="false"
                android:textSize="18sp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_relativelayout_border"
        android:padding="10dp">

        <TextView
            android:id="@+id/settings_text_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/connection"

            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_below="@+id/settings_text_connection"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ic_baseline_settings_remote" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:textAppearance="@android:style/TextAppearance.Material.Body2"
                    android:text="@string/connection_informations"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/settings_text_connection_informations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/no_device_connected"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>